--- a/Estilos/Media-query.css
+++ b/Estilos/Media-query.css
@@ -1,50 +1,55 @@
 @charset "UTF-8";
 
-@media screen and (min-width: 768px) and (max-width: 922px) {
+@media screen and (min-width: 768px) and (max-width: 992px) {
     body{
         background-image: linear-gradient(to top, #49a09d, #5f2c82);
     }
-
-    section#log{
+    section#login{
         width: 80vw;
+        height: 280px;
+
     }
-    
-    section#log > div#img{
+    section#login > div#imagem{
         float: left;
         width: 30%;
         height: 100%;
     }
-
-    section#log > div#form{
+    section#login > div#formulario{
         float: right;
         width: 70%;
     }
+    form > a.botao{
+        font-size: 1.2em;
+    }
+
 }
 
 @media screen and (min-width: 992px) {
     body{
-        background-image: linear-gradient(to top, #49a09d, #5f2c82);
+        background-image: linear-gradient(to top, #03a7a7, #510385);
     }
-    
-    section#log {
-        width: 990px;
+    section#login{
+        width: 950px;
+        height: 350px;
     }
-
-    section#log > div#img{
-        float: left;
+    section#login > div#imagem{
+        float: right;
         width: 50%;
         height: 100%;
     }
-    section#log > div#form{
-        float: right;
+    section#login > div#formulario{
+        float: left;
         width: 50%;
     }
-    div#form{
+    div#formulario > h1{
         font-size: 2em;
     }
-    
-    div#form > p{
-        font-size: 1.2em;
 
+    div#formulario > p{
+        font-size: 1em;
+        margin: 20px 0px;
+    }
+    form > a.botao{
+        font-size: 1.2em;
     }
 }
