--- a/Estilos/style.css
+++ b/Estilos/style.css
@@ -1,56 +1,134 @@
 @charset "UTF-8";
-:root{
-    --cor1: #49a09d;
-    --cor2: #5f2c82;
-}
 *{
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    padding: 0px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin: 0px;
+    padding: 0px;
     box-sizing: border-box;
 }
-body, html{
-    background-image: linear-gradient(to top, #49a09d, #5f2c82);
+html, body{
+
+    background-color: #5f2c82;
     height: 100vh;
     width: 100vw;
 }
+
 main{
     position: relative;
     height: 100vh;
     width: 100vw;
-
 }
-section#log {
+
+section#login{
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    overflow: hidden;
 
     background-color: white;
-    width: 260px;
-    height: 500px;
+    width: 250px;
+    height: 515px;
     border-radius: 20px;
-    box-shadow: 0px px 10px rgba(0, 0, 0, 0.450);
-
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.450);
     transition: width 0.3s, height 0.3s;
     transition-timing-function: ease;
 }
-section#log > div#img {
+
+section#login > div#imagem{
     display: block;
-    background: var(--cor2) url(../imagens/entrada.jpg)no-repeat left bottom;
+    background: #5f2c82 url('../imagens/entrada.jpg') center center;
     background-size: cover;
     height: 200px;
 }
-section#log > div#form{
+
+section#login > div#formulario{
     display: block;
     padding: 10px;
-
 }
-div#form > h1{
+div#formulario > h1{
     text-align: center;
     margin-bottom: 10px;
+}
+
+div#formulario > p{
+    font-size: 0.8em;
+}
+
+form > div.campo{
+    display: block;
+    width: 100%;    
+    height: 40px;    
+    background-color: #5f2c82;
+    margin: 5px 0px;
+    border: 2px solid #5f2c82;
+    border-radius: 8px;
+    
+}
+
+div.campo > label{
+    display: none;
+}
+
+div.campo > span{
+    color: white;
+    /* background-color: black; */
+    font-size: 2em;
+    width: 40px;
+    padding: 5px;
+}
+
+div.campo > input{
+    background-color: #49cfcd;
+    font-size: 1em;
+    width: calc(100% - 45px);
+    height: 100%;
+    transform: translateY(-12px);
+    border: 0px;
+    border-radius: 8px;
+    padding: 4px;
+}
+
+div.campo > input:focus-within{
+    background-color: white;
+    border: none;
+}
+
+form > input[type=submit]{
+    display: block;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    background-color: #49a09d;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
 
 }
-div#form > p{
+form > input[type=submit]:hover{
+    background-color: #2d6462;
+}
+
+form > a.botao{
+    display: block;
+    text-align: center;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    padding-top: 5px;
+    margin-top: 5px;
+
+    background-color: #f7fafa;
+    color: #2d6462;
+    border: 1px solid #024442;
+    border-radius: 5px;
+    text-decoration: none;
+
+}
+form a.botao:hover{
+    background-color: #6cd3cf;
+}
+
+form > a.botao > span{
     font-size: 0.8em;
 }
